fix: 펫 엔티티 이미지 컬럼 추가 및 기본 이미지 추가. 펫 엔티티에 집 이미지 컬럼 추가, 정적 리소스 폴더에 기본 이미지 파일 추가.